--- a/qros-storage/qros-dna/0index.html
+++ b/qros-storage/qros-dna/0index.html
@@ -6,6 +6,6 @@
 <body>
     <div id="nav-bar">Navigation Bar</div>
     <div id="content">Placeholder for content</div>
-    <script src="web.js"></script>
+    <script src="0web.js"></script>
 </body>
 </html>
